; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/hwmon/extr_adt7473.c_adt7473_probe.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/hwmon/extr_adt7473.c_adt7473_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { %struct.TYPE_6__, i32 }
%struct.TYPE_6__ = type { i32 }
%struct.i2c_device_id = type { i32 }
%struct.adt7473_data = type { %struct.TYPE_5__, i32, i32 }
%struct.TYPE_5__ = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"%s chip found\0A\00", align 1
@adt7473_attr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*, %struct.i2c_device_id*)* @adt7473_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @adt7473_probe(%struct.i2c_client* %0, %struct.i2c_device_id* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.i2c_client*, align 8
  %5 = alloca %struct.i2c_device_id*, align 8
  %6 = alloca %struct.adt7473_data*, align 8
  %7 = alloca i32, align 4
  store %struct.i2c_client* %0, %struct.i2c_client** %4, align 8
  store %struct.i2c_device_id* %1, %struct.i2c_device_id** %5, align 8
  %8 = load i32, i32* @GFP_KERNEL, align 4
  %9 = call %struct.adt7473_data* @kzalloc(i32 12, i32 %8)
  store %struct.adt7473_data* %9, %struct.adt7473_data** %6, align 8
  %10 = load %struct.adt7473_data*, %struct.adt7473_data** %6, align 8
  %11 = icmp ne %struct.adt7473_data* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @ENOMEM, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %7, align 4
  br label %70

15:                                               ; preds = %2
  %16 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %17 = load %struct.adt7473_data*, %struct.adt7473_data** %6, align 8
  %18 = call i32 @i2c_set_clientdata(%struct.i2c_client* %16, %struct.adt7473_data* %17)
  %19 = load %struct.adt7473_data*, %struct.adt7473_data** %6, align 8
  %20 = getelementptr inbounds %struct.adt7473_data, %struct.adt7473_data* %19, i32 0, i32 2
  %21 = call i32 @mutex_init(i32* %20)
  %22 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %23 = getelementptr inbounds %struct.i2c_client, %struct.i2c_client* %22, i32 0, i32 0
  %24 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %25 = getelementptr inbounds %struct.i2c_client, %struct.i2c_client* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @dev_info(%struct.TYPE_6__* %23, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %26)
  %28 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %29 = call i32 @adt7473_init_client(%struct.i2c_client* %28)
  %30 = load i32, i32* @adt7473_attr, align 4
  %31 = load %struct.adt7473_data*, %struct.adt7473_data** %6, align 8
  %32 = getelementptr inbounds %struct.adt7473_data, %struct.adt7473_data* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 0
  store i32 %30, i32* %33, align 4
  %34 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %35 = getelementptr inbounds %struct.i2c_client, %struct.i2c_client* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 0
  %37 = load %struct.adt7473_data*, %struct.adt7473_data** %6, align 8
  %38 = getelementptr inbounds %struct.adt7473_data, %struct.adt7473_data* %37, i32 0, i32 0
  %39 = call i32 @sysfs_create_group(i32* %36, %struct.TYPE_5__* %38)
  store i32 %39, i32* %7, align 4
  %40 = load i32, i32* %7, align 4
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %43

42:                                               ; preds = %15
  br label %67

43:                                               ; preds = %15
  %44 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %45 = getelementptr inbounds %struct.i2c_client, %struct.i2c_client* %44, i32 0, i32 0
  %46 = call i32 @hwmon_device_register(%struct.TYPE_6__* %45)
  %47 = load %struct.adt7473_data*, %struct.adt7473_data** %6, align 8
  %48 = getelementptr inbounds %struct.adt7473_data, %struct.adt7473_data* %47, i32 0, i32 1
  store i32 %46, i32* %48, align 4
  %49 = load %struct.adt7473_data*, %struct.adt7473_data** %6, align 8
  %50 = getelementptr inbounds %struct.adt7473_data, %struct.adt7473_data* %49, i32 0, i32 1
  %51 = load i32, i32* %50, align 4
  %52 = call i64 @IS_ERR(i32 %51)
  %53 = icmp ne i64 %52, 0
  br i1 %53, label %54, label %59

54:                                               ; preds = %43
  %55 = load %struct.adt7473_data*, %struct.adt7473_data** %6, align 8
  %56 = getelementptr inbounds %struct.adt7473_data, %struct.adt7473_data* %55, i32 0, i32 1
  %57 = load i32, i32* %56, align 4
  %58 = call i32 @PTR_ERR(i32 %57)
  store i32 %58, i32* %7, align 4
  br label %60

59:                                               ; preds = %43
  store i32 0, i32* %3, align 4
  br label %72

60:                                               ; preds = %54
  %61 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %62 = getelementptr inbounds %struct.i2c_client, %struct.i2c_client* %61, i32 0, i32 0
  %63 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %62, i32 0, i32 0
  %64 = load %struct.adt7473_data*, %struct.adt7473_data** %6, align 8
  %65 = getelementptr inbounds %struct.adt7473_data, %struct.adt7473_data* %64, i32 0, i32 0
  %66 = call i32 @sysfs_remove_group(i32* %63, %struct.TYPE_5__* %65)
  br label %67

67:                                               ; preds = %60, %42
  %68 = load %struct.adt7473_data*, %struct.adt7473_data** %6, align 8
  %69 = call i32 @kfree(%struct.adt7473_data* %68)
  br label %70

70:                                               ; preds = %67, %12
  %71 = load i32, i32* %7, align 4
  store i32 %71, i32* %3, align 4
  br label %72

72:                                               ; preds = %70, %59
  %73 = load i32, i32* %3, align 4
  ret i32 %73
}

declare dso_local %struct.adt7473_data* @kzalloc(i32, i32) #1

declare dso_local i32 @i2c_set_clientdata(%struct.i2c_client*, %struct.adt7473_data*) #1

declare dso_local i32 @mutex_init(i32*) #1

declare dso_local i32 @dev_info(%struct.TYPE_6__*, i8*, i32) #1

declare dso_local i32 @adt7473_init_client(%struct.i2c_client*) #1

declare dso_local i32 @sysfs_create_group(i32*, %struct.TYPE_5__*) #1

declare dso_local i32 @hwmon_device_register(%struct.TYPE_6__*) #1

declare dso_local i64 @IS_ERR(i32) #1

declare dso_local i32 @PTR_ERR(i32) #1

declare dso_local i32 @sysfs_remove_group(i32*, %struct.TYPE_5__*) #1

declare dso_local i32 @kfree(%struct.adt7473_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
